Improved run config.